src/test/ui/feature-gates/feature-gate-allow_fail.stderr
error[E0658]: the `#[allow_fail]` attribute is an experimental feature
  --> $DIR/feature-gate-allow_fail.rs:3:1
   |
LL | #[allow_fail]
   | ^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/46488
   = help: add `#![feature(allow_fail)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
